# openbadgeslib

./: .gitignore  .hgignore  .hgtags  CONTRIBUTORS.txt  Changelog.txt  MANIFEST  MANIFEST.in  README.md  README.txt  TODO.txt  changelog.txt  config.py  environment.yml  exceptions.py  keygenerator.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
3dparty/jws-0.1.2/jws/: algos.py  (+2 more)
3dparty/jws-0.1.2/jws.egg-info/: PKG-INFO
3dparty/utils-0.6/: PKG-INFO
docs/: authors.rst  conf.py  development.rst  glossary.rst  index.rst  installation.rst  intro.rst  userguide.rst
documents/: TODO.txt  config.ini.example  install.txt  problemas.txt
openbadges/: badgesigner.py  badgeverifier.py  config.py  errors.py  exceptions.py  keygenerator.py  libopenbadges.py  openbadges-verifier.py  runtests.sh
openbadges/tests/: test_00_general.py  test_01_keygenerator.py  test_02_verifyfactory.py  test_keygenerator.py
openbadgeslib/: CONTRIBUTORS.txt  Changelog  __init__.py  assertion.py  badge.py  config.ini.example  config.py  confparser.py  errors.py  keys.py  libopenbadges.py  logs.py  mail.py  openbadges-keygenerator.py  openbadges-verifier.py  openbadges_init.py  openbadges_keygenerator.py  openbadges_publish.py  openbadges_signer.py  openbadges_verifier.py  runtests.sh  signer.py  util.py  verifier.py
openbadgeslib/_jws/: __init__.py  exceptions.py  utils.py
openbadgeslib/documents/: uso.txt
openbadgeslib/ob2/: __init__.py  badge.py  signer.py  verifier.py
openbadgeslib/ob3/: __init__.py  credential.py  signer.py  verifier.py
openbadgeslib/tests/: runtests.sh  test_02_signerfactory.py  test_02_verifyfactory.py  test_common.py  test_key_operation.py  test_signer_operation.py  test_verify_operation.py
tests/: config1.ini  conftest.py  test_badge_io.py  test_common.py  test_jws.py  test_key_operation.py  test_ob3_credential.py  test_ob3_signer.py  test_ob3_verifier.py  test_sign_ecc.pem  test_sign_rsa.pem  test_signer_operation.py  test_util.py  test_verify_ecc.pem  test_verify_operation.py  test_verify_rsa.pem
(+10 files in other folders)
